[project]
name = "boat-race-ai"
version = "1.0.0"
description = "LightGBM + FastAPI 競艇予想AIシステム"
requires-python = ">=3.11"

# ============================================================
# pytest 設定
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: 実行時間の長いテスト（スキップ対象: pytest -m 'not slow'）",
    "integration: 外部サービスが必要なテスト",
]

# ============================================================
# Ruff（リンター + フォーマッター）設定
# ============================================================
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle エラー
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # 行長（docstring は長くなりがち）
    "B008",  # FastAPI の Depends() を使った関数呼び出し
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ============================================================
# Coverage 設定
# ============================================================
[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60   # カバレッジ60%未満でCIを失敗させる
